# search_ad2

./: CHANGELOG.md  action_search.json  main.py  manifest.json  pyproject.toml
search_in_ad_modules/: __init__.py  base.py  models.py  search.py
tests/: test_search.py
